# alphax_crm_portal

./: MANIFEST.in  README.md  build.json  package.json  pyproject.toml
alphax_crm_portal/: hooks.py
alphax_crm_portal/api/: language.py
alphax_crm_portal/page/alphax_crm/: alphax_crm.css  alphax_crm.js  alphax_crm.json
alphax_crm_portal/public/css/: alphax_crm_portal.bundle.css
alphax_crm_portal/public/js/: alphax_crm_portal.bundle.js
