[build-system]
requires = ["flit_core>=3.9.0,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "alphax_crm_portal"
version = "0.0.5"
description = "AlphaX CRM Portal desk page (/app/alphax-crm) with per-user Arabic/English UI language switch (Frappe v15 Cloud build-safe)"
authors = [{name="AlphaX", email="support@alphax.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.flit.module]
name = "alphax_crm_portal"
